--- a/config.json
+++ b/config.json
@@ -4,5 +4,5 @@
     "shodan_api": "API key",
     "timeout": 15,
     "retries": 5,
-    "user_agent": "SubdomainEnumerator/1.0 (Python; asyncio; Contact: your_email@example.com)"
+    "user_agent": "Dark Zero (Python; asyncio; Contact: your_email@example.com)"
 }
